# edge-detection-app

./: README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionapp/: CameraHelper.kt  MainActivity.kt  NativeLib.kt
app/src/main/java/com/example/edgedetectionapp/gl/: EdgeDetectionRenderer.kt  GlUtils.kt  OpenGlRenderer.kt
app/src/main/native-opencv/jni/: OpenCVConfig.cmake
app/src/main/native-opencv/jni/abi-arm64-v8a/: OpenCVModules-release.cmake  OpenCVModules.cmake
app/src/main/native-opencv/jni/abi-armeabi-v7a/: OpenCVModules.cmake
app/src/main/native-opencv/jni/abi-x86/: OpenCVModules.cmake
app/src/main/native-opencv/jni/abi-x86_64/: OpenCVModules.cmake
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
